arika/tests/trybuild/null_eop_in_to_ut1.stderr
error[E0277]: the trait bound `NullEop: Ut1Offset` is not satisfied
  --> tests/trybuild/null_eop_in_to_ut1.rs:12:27
   |
12 |     let _ut1 = utc.to_ut1(&NullEop);
   |                    ------ ^^^^^^^^ the trait `Ut1Offset` is not implemented for `NullEop`
   |                    |
   |                    required by a bound introduced by this call
   |
note: required by a bound in `Epoch::to_ut1`
  --> src/epoch.rs
   |
   |     pub fn to_ut1<P: crate::earth::eop::Ut1Offset + ?Sized>(&self, eop: &P) -> Epoch<Ut1> {
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Epoch::to_ut1`
